# Clique_ECS

./: .gitignore  CMakeLists.txt  ECS_AutoGrouper.sln  LICENSE  README.md
ECS_AutoGrouper/: BoolExprTreeManager.h  ComponentSparseSet.h  CoreComponentManagerImpl.h  ECS_AutoGrouper.cpp  ECS_AutoGrouper.vcxproj  ECS_AutoGrouper.vcxproj.filters  EntityImpl.h  PrintDebugger.h  SystemImpl.h  change_test_output.txt  change_test_output_supl.txt  output.txt  output_NO_HASH.txt  output_TESTING+.txt  output_WITH_HASH.txt  output_WITH_NOTUPLE.txt  output_WITH_TUPLE.txt
ECS_src/: BoolExprBitVector.cpp  BoolExprBitVector.h  BoolExprBitVector_Port.cpp  BoolExprBitVector_Port.h  BoolExprTreeManager.cpp  BoolExprTreeManager.h  BoolExprTreeManager_PORT.cpp  BoolExprTreeManager_PORT.h  BooleanExprTree.cpp  BooleanExprTree.h  BooleanExprTree_Port.cpp  ComponentArray.cpp  ComponentArray.h  ComponentArray_Port.cpp  ComponentArray_Port.h  ComponentSparseSet.cpp  ComponentSparseSet.h  ComponentSparseSet_Port.cpp  CoreComponentManagerImpl.cpp  CoreComponentManagerImpl.h  CoreComponentManagerImpl_Port.cpp  ECS_AutoGrouper.cpp  ECS_Manager.cpp  ECS_Manager.h  ECS_Manager_Port.cpp  ECS_SystemImpl.h  ECS_main.cpp  ESC_Manager_SystemTraits.h  ExampleECS.h  RateChangeBenchmark.h  SystemImpl.cpp  SystemImpl.h  SystemImpl_Port.cpp  UTILS_ECS.cpp  UTILS_ECS.h  _ScratchWork.h
